--- a/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Infrastructure/TouchConsulting.GestorInventario.Infrastructure.csproj
+++ b/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Infrastructure/TouchConsulting.GestorInventario.Infrastructure.csproj
@@ -1,8 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>disable</Nullable>
+		<LangVersion>11.0</LangVersion>
+	</PropertyGroup>
 
 </Project>
