--- a/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Infrastructure/TouchConsulting.GestorInventario.Infrastructure.csproj
+++ b/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Infrastructure/TouchConsulting.GestorInventario.Infrastructure.csproj
@@ -7,4 +7,13 @@
 		<LangVersion>11.0</LangVersion>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <Folder Include="Persitence\Configurations\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.20" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+	</ItemGroup>
+
 </Project>
