--- a/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Infrastructure/TouchConsulting.GestorInventario.Infrastructure.csproj
+++ b/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Infrastructure/TouchConsulting.GestorInventario.Infrastructure.csproj
@@ -8,12 +8,14 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <Folder Include="Persitence\Configurations\" />
+	  <PackageReference Include="AutoMapper" Version="13.0.1" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.20" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.20" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.20" />
-	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+	  <ProjectReference Include="..\TouchConsulting.GestorInventario.Application\TouchConsulting.GestorInventario.Application.csproj" />
 	</ItemGroup>
 
 </Project>
