Implementación de migraciones con EF

--- a/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Api/appsettings.Development.json
+++ b/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Api/appsettings.Development.json
@@ -1,8 +1,26 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} {RequestId,13} [{Level:u3}] {Message:lj} {Properties} {NewLine}{Exception}",
+          "path": "./LogFile/ApiInternaLog-.txt", //ruta dentro de la aplicacion
+          //"path": "C:\\Logs\\ApiInternaLog-.txt", //ruta fisica del archivo
+          //"path": "C:/Logs/ApiInternaLog-.txt", //ruta fisica del archivo
+          "rollingInterval": "Day"
+        }
+      }
+    ]
+  },
+  "ConnectionStrings": {
+    "DB_TOUCHCONSULTING": "Server=DESKTOP-RSSR4PN;Database=TouchConsultingDB;User Id=sa;Password=wilson1890;TrustServerCertificate=True;"
   }
 }
