--- a/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Application/TouchConsulting.GestorInventario.Application.csproj
+++ b/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Application/TouchConsulting.GestorInventario.Application.csproj
@@ -9,6 +9,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="AutoMapper" Version="13.0.1" />
+	  <PackageReference Include="EFCore.BulkExtensions.SqlServer" Version="7.8.1" />
 	  <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
 	  <PackageReference Include="MediatR" Version="12.4.1" />
 	</ItemGroup>
@@ -19,7 +20,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Handlers\" />
+	  <Folder Include="Handlers\Commands\" />
 	</ItemGroup>
 
 </Project>
