--- a/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Api/appsettings.Development.json
+++ b/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Api/appsettings.Development.json
@@ -12,13 +12,16 @@
         "Name": "File",
         "Args": {
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} {RequestId,13} [{Level:u3}] {Message:lj} {Properties} {NewLine}{Exception}",
-          "path": "./LogFile/ApiInternaLog-.txt", //ruta dentro de la aplicacion
+          "path": "./LogFile/ApiTouchConsultingLog-.txt", //ruta dentro de la aplicacion
           //"path": "C:\\Logs\\ApiInternaLog-.txt", //ruta fisica del archivo
           //"path": "C:/Logs/ApiInternaLog-.txt", //ruta fisica del archivo
           "rollingInterval": "Day"
         }
       }
     ]
+  },
+  "Jwt": {
+    "key": "F8096D78-03DA-4911-B291-5E6A35ECF058"
   },
   "ConnectionStrings": {
     "DB_TOUCHCONSULTING": "Server=DESKTOP-RSSR4PN;Database=TouchConsultingDB;User Id=sa;Password=wilson1890;TrustServerCertificate=True;"
