--- a/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Common/TouchConsulting.GestorInventario.Common.csproj
+++ b/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Common/TouchConsulting.GestorInventario.Common.csproj
@@ -5,4 +5,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Utils\" />
+  </ItemGroup>
+
 </Project>
