--- a/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Api/appsettings.Development.json
+++ b/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Api/appsettings.Development.json
@@ -23,6 +23,10 @@
   "Jwt": {
     "key": "F8096D78-03DA-4911-B291-5E6A35ECF058"
   },
+  "MailSettings": {
+    "MailFrom": "ewilsonvc.dev@gmail.com",
+    "MailPassword": "cpgnhhhpfoqgpbxs"
+  },
   "ConnectionStrings": {
     "DB_TOUCHCONSULTING": "Server=DESKTOP-RSSR4PN;Database=TouchConsultingDB;User Id=sa;Password=wilson1890;TrustServerCertificate=True;"
   }
