--- a/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Application/TouchConsulting.GestorInventario.Application.csproj
+++ b/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Application/TouchConsulting.GestorInventario.Application.csproj
@@ -18,6 +18,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\TouchConsulting.GestorInventario.Common\TouchConsulting.GestorInventario.Common.csproj" />
 	  <ProjectReference Include="..\TouchConsulting.GestorInventario.Domain\TouchConsulting.GestorInventario.Domain.csproj" />
+	  <ProjectReference Include="..\TouchConsulting.GestorInventario.ExternalServices\TouchConsulting.GestorInventario.ExternalServices.csproj" />
 	</ItemGroup>
 
 </Project>
