--- a/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Infrastructure/TouchConsulting.GestorInventario.Infrastructure.csproj
+++ b/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Infrastructure/TouchConsulting.GestorInventario.Infrastructure.csproj
@@ -22,6 +22,7 @@
 	  </PackageReference>
 	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
 	</ItemGroup>
 
