Appsegints update ocultar credenciales

--- a/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Api/appsettings.Development.json
+++ b/TouchConsulting.GestorInventario/TouchConsulting.GestorInventario.Api/appsettings.Development.json
@@ -24,8 +24,8 @@
     "key": "F8096D78-03DA-4911-B291-5E6A35ECF058"
   },
   "MailSettings": {
-    "MailFrom": "ewilsonvc.dev@gmail.com",
-    "MailPassword": "cpgnhhhpfoqgpbxs"
+    "MailFrom": "tucorreo@proveedor.com",
+    "MailPassword": "tupasswordapps_creado_en_google_u_otro_proveedor"
   },
   "ConnectionStrings": {
     "DB_TOUCHCONSULTING": "Server=DESKTOP-RSSR4PN;Database=TouchConsultingDB;User Id=sa;Password=wilson1890;TrustServerCertificate=True;"
